# predbat

./: .gitignore  .pre-commit-config.yml  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
